<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/edtTextUserName"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/edtTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:layout_toRightOf="@+id/imageView1"
        android:ems="10"
        android:hint="@string/login_txt_user_hint" />

    <requestFocus />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/editTextPassword"
        android:src="@drawable/key" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtTextUserName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtTextUserName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login_txt_pass_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="19dp"
        android:text="@string/login_btn_login" />

</RelativeLayout>